--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     .t {
         font-size: 2.5em;
     }
+    
+    .mock {
+        height: 40vh;
+        width: auto;
+        max-width: 80px;
+        box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 1px 2px;
+    }
 </style>
 
 <body>
@@ -39,8 +46,35 @@
                 <img src="./l.png" alt="" style="height: auto; width:auto">
             </section>
             <section data-auto-animate data-auto-animate-unmatched="fade">
-                <img src="./l.png" alt="" style="height: 15vh; width:auto">
-
+                <img src="./l.png" alt="" style="height: 10vh; width:auto">
+                <div>
+                    <img class="mock" src="mockup/1.png" alt="">
+                    <img class="mock" src="mockup/2.png" alt="">
+                    <img class="mock" src="mockup/3.png" alt="">
+                    <img class="mock" src="mockup/4.png" alt="">
+                    <img class="mock" src="mockup/5.png" alt="">
+                </div>
+            </section>
+            <section data-auto-animate data-auto-animate-unmatched="fade">
+                <img style="height: 55vh; width: auto;" src="mockup/web.png" alt="">
+                <br>
+                <img src="./l.png" alt="" style="height: 10vh; width:auto">
+            </section>
+            <section>
+                <span style="font-size: 1.5em;">Prévision</span>
+                <img src="chiffre.png" alt="">
+            </section>
+            <section>
+                <span style="font-size: 2em;">Merci</span>
+                <br>
+                <br>
+                <span>
+					Voulez-vous un démo du <span style="color:#D49234;"> prototype </span> ?
+                <br>
+                <span style="font-weight: 200; font-size: 0.65em;">Contactez-nous</span>
+                <br>
+                <strong style="color:#D49234;font-weight: 300; font-size: 0.9em;">moodland@gmail.com</strong>
+                </span>
             </section>
         </div>
     </div>
