--- a/index.html
+++ b/index.html
@@ -59,10 +59,15 @@
                 <span class="t">Le bien-être au travail</span>
                 <h5 style="font-weight: 300;">grâce au digital</h5>
                 <img src="./k.png" alt="" style="height: 20vh ;">
-                <p>Tous pour un travail descent</p>
+                <p>Tous pour un travail décent</p>
+                <br>
             </section>
             <section>
-                <span style="font-size: 1.5em;">Les entreprises peinent à fidéliser leur salarié</span>
+                <span class="t">Pour voir le slide</span>
+                <img src="./qr.png" alt="" style="height: 6em ; width: auto;">
+            </section>
+            <section>
+                <span style="font-size: 1.5em;">Les entreprises peinent à fidéliser leurs salariés</span>
                 <img src="./demission.jpeg" alt="" style="height: auto; width:auto">
             </section>
             <section data-auto-animate data-auto-animate-unmatched="fade">
@@ -91,7 +96,7 @@
                 <br>
                 <br>
                 <span>
-					Voulez-vous un démo du <span style="color:#D49234;"> prototype </span> ?
+					Voulez-vous un démo <span style="color:#D49234;"> plus poussé </span> ?
                 <br>
                 <span style="font-weight: 200; font-size: 0.65em;">Contactez-nous</span>
                 <br>
