--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <br>
                 <span style="font-weight: 200; font-size: 0.65em;">Contactez-nous</span>
                 <br>
-                <strong style="color:#D49234;font-weight: 300; font-size: 0.9em;">moodland@gmail.com</strong>
+                <strong style="color:#D49234;font-weight: 300; font-size: 0.9em;">moodland.mg@gmail.com</strong>
                 </span>
             </section>
         </div>
